--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,9 +1,7 @@
 {
   "recommendations": [
     "salesforce.salesforcedx-vscode",
-    "redhat.vscode-xml",
     "dbaeumer.vscode-eslint",
-    "esbenp.prettier-vscode",
-    "financialforce.lana"
+    "esbenp.prettier-vscode"
   ]
 }
